--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
 
     </head>
     <body>
-        <h1> welcome! </h1>
+        <h1> welcome to ginas world! </h1>
+
+<h3>
+    get to know me ◡̈
+    <br>
+    here are some of my favorite things:
+</h3>
+
+<ul>
+    <li>my cats</li>
+    <li>my plants</li>
+    <li>a hot chai</li>
+    <li>long naps</li>
+    <li>alani nu</li>
+</ul>
+
+<img src="images/kitties.jpg" alt="2 cats sitting" class="cat-pic">
+
+<h3>
+    here is a link to my personal site!
+    <a href="https://ginaklim.design/">ginaklimdesign</a>
+</h3>
+
         <h2> Journal Entries </h2>
         
         <h3>
@@ -19,8 +41,6 @@
             1/19 -  1/20
         </h3>
       
-
-        <!-- dis is a comment -->
         <p>        
         In Laurel Schwulst's text, she reflects on the digital world and references it in a way that gives it physicality and a worldly-esc structure. I’ve always “visualized” a website as some sort of house, apartment unit, or mailbox of the internet but never really realized it that way. Laurel Schwulst sees websites as both an object and the subject, with its creator being both the writer and the builder and says the work put into it often reflects the intention behind it. 
         Laurel Schwulst points out that during this time in the world there is a need for individual people to guide the future of the web rather than corporations like facebook, twitter, and Google. This made me think about how I have never really been intrigued by sites like these and similar ones like Amazon or youtube, simply because they lack personality and uniqueness because they are just there for the content. When I visit the site of an individual creator or small business, you can tell it was built with more intention visually (in most cases) and I find myself more intrigued because it often includes more personal elements. 
@@ -28,6 +48,8 @@
 <br>
         Ursula K. Le Guins says the neat thing about technologies is that we can all learn to do it. I think it’s easy to forget that "technology" can be defined by a huge number of things, and things that seem simple like starting a fire or crafting a pair of shoes is just as technological as engineering or coding a website.  Le Guin talks about how technology reflects how humans interact with the physical world, this includes how people “get and keep and cook food, how they clothe themselves” etc. This goes to show just how physical technology can be and that it is not an abstract thing that is always out of our control but it is sometimes purely about survival. 
         </p>
+
+    <img src="images/landscape-bw.jpg" alt="black and white landscape";>
 
     </body>
 </html>
