--- a/first-website/index.html
+++ b/first-website/index.html
@@ -2,23 +2,22 @@
 <html>
     <head>
         <title> my first website </title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="assets/main.css">
 
 
     </head>
     <body>
         <h1> barrys world </h1>
         <h2> just came to say hello... </h2>
-        
-        <p class="special"> hello world! </p>
+     
 
         <ul>
             <li> <a href="https://www.imdb.com/title/tt0389790/"> My movie </a> </li>
-            <li><a href="about.html"> About Me</a> </li>
+            <li><a href="pages/about.html"> About Me</a> </li>
         </ul>
 
         <!-- dis is a comment -->
-        <p> According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees don't care what humans think is impossible. 
+        <p class="special"> According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees don't care what humans think is impossible. 
         <br>
         <br>
         <br>
@@ -43,9 +42,11 @@
         <hr>
 
         <h3> hi, I'm Barry. </h3>
-        <img src="barry.jpg" alt="Barry The Bee judging you" width="600"> 
-        <img src="barry.jpg" alt="Barry The Bee judging you" width="600"> 
-        <img src="barry.jpg" alt="Barry The Bee judging you" width="600"> 
+        <img src="assets/barry.jpg" alt="Barry The Bee judging you" width="600"> 
+        <img src="assets/barry.jpg" alt="Barry The Bee judging you" width="600"> 
+        <img src="assets/barry.jpg" alt="Barry The Bee judging you" width="600"> 
+        <img src="assets/barry.jpg" alt="Barry The Bee judging you" width="600"> 
 
+        <p><a href="../index.html"> back to main </a></p>
     </body>
 </html>
