--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
     <head>
         <link rel="stylesheet" href="https://use.typekit.net/siu4tfw.css">  <!-- cooper italic - adobe fonts -->
         <link rel="stylesheet" href="https://use.typekit.net/siu4tfw.css">
+        <link rel="stylesheet" href="https://use.typekit.net/siu4tfw.css">
+        <link rel="icon" type="image/png" href="images/favicon.png">
 
         <title> gina's homepage </title>
         <link rel="stylesheet" href="index.css">
 
 
     </head>
+
     <body>
+
+        <video autoplay muted loop playsinline id="bg">
+  <source src="images/gradient-vid.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
         <h1> welcome to ginas world </h1>
 
         <ul>
@@ -17,7 +26,9 @@
             <br>
             <li><a href="passion-website/passion.html"> passion site </a> </li>
             <br>
-            <li><a href="passion-v2/passionvt.html"> passion v2 </a> </li>
+            <li><a href="passion-v2/passionvt.html"> passion version II </a> </li>
+            <br>
+            <li><a href="structure/index.html"> structure site </a> </li>
 
         </ul>
 
